tests/errors/builder_return.vt
class B { x: int; fn init(){} builder fn m() { return 5; } } fn main(){}
